k8s/applications/dev/whoami/Namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  labels:
    istio.io/dataplane-mode: ambient
