k8s/applications/dev/whoami/ReferenceGrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: grant-security-policy
  namespace: whoami
spec:
  from:
    - {namespace: gateway, group: gateway.envoyproxy.io, kind: SecurityPolicy}
  to:
    - {group: gateway.networking.k8s.io, kind: HTTPRoute}
