k8s/applications/dev/whoami/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
      app.kubernetes.io/version: stable
      app.kubernetes.io/component: server
      app.kubernetes.io/part-of: whoami
      app.kubernetes.io/managed-by: kustomize
  template:
    metadata:
      namespace: whoami
      labels:
        app.kubernetes.io/name: whoami
      app.kubernetes.io/version: stable
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: whoami
        app.kubernetes.io/managed-by: kustomize
    spec:
      serviceAccountName: whoami
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: whoami
          # Dockerfile: https://github.com/traefik/whoami/blob/master/Dockerfile
          image: ghcr.io/traefik/whoami:v1.11.0
          args: ['-port=8080']
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          resources:
            requests: {memory: 12Mi}
            limits: {memory: 12Mi}
          ports:
            - {name: http, protocol: TCP, containerPort: 8080}
          startupProbe: {httpGet: {port: 8080, path: /}, initialDelaySeconds: 2, periodSeconds: 10, failureThreshold: 3}
          livenessProbe: {httpGet: {port: 8080, path: /}, initialDelaySeconds: 10, periodSeconds: 120}
          readinessProbe: {httpGet: {port: 8080, path: /}, initialDelaySeconds: 10, periodSeconds: 120}
