k8s/applications/dev/whoami/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: whoami
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: whoami
  ports:
    - {name: http, protocol: TCP, port: 80, targetPort: http}
