k8s/applications/dev/whoami/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  parentRefs:
    - {namespace: gateway, name: internal, sectionName: https-wc-talmox-hera-home-karlsen-fr}
  hostnames:
    - whoami.talmox.hera.home.karlsen.fr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  parentRefs:
    - {namespace: gateway, name: internal, sectionName: https-wc-karlsen-app}
    - {namespace: gateway, name: external, sectionName: https-wc-karlsen-app}
  hostnames:
    - whoami.karlsen.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami
          port: 8080
