k8s/applications/dev/whoami/SecurityPolicy.yaml
# Cross namespace attachment?
# - https://github.com/envoyproxy/gateway/issues/5143
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: allow-all-http
  namespace: whoami
spec:
  targetRefs:
    - {group: gateway.networking.k8s.io, kind: HTTPRoute, name: web}
  authorization:
    defaultAction: Allow
